Fixed Searchbox is missing on answers page when it is being accessed from facebook/Twitter.

--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -25,11 +25,11 @@
                         <div class="span3">
                             @if (ViewBag.Count != null)
                             {
-                                <label id="count" class="control-label count_align" style="text-align:left">@ViewBag.Count</label>
+                                <label id="count" class="control-label count_align" style="text-align: left; float: left; padding-top: 13px;">@ViewBag.Count</label>
                             }
                             else
                             {
-                                <label id="count" class="control-label count_align" style="text-align:left">0/200</label>
+                                <label id="count" class="control-label count_align" style="text-align: left; float: left; padding-top: 13px;">0/200</label>
                             }
                         </div>
                     </div>
