--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -22,7 +22,7 @@
             <div class="span12 main-outter-padding">
                 <div class="row-fluid">
                     <div class="span12 finddoc-title">
-                        Find a Doctor
+                        Find A Doctor
                     </div>
                 </div>
                 <div class="top_margin content_border find-Doc-gbColor">
