Fixed IE browser Reset Password: textboxes becomes invisible when user enters valid data into it.

--- a/MiraiConsultMVC/Views/User/Changepassword.cshtml
+++ b/MiraiConsultMVC/Views/User/Changepassword.cshtml
@@ -49,7 +49,7 @@
                         <label for="password" class="required">Current Password:</label>
                     </div>
                     <div class="span8 pull-right controls-right-padding btn-padding-left">
-                        @Html.TextBoxFor(m => m.currentPassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Current Password" })
+                        @Html.TextBoxFor(m => m.currentPassword, new { @class = "input-block-level gray-border contact_margin input-block-display", type = "password", maxlength = "30", placeholder = "Current Password" })
                         @Html.ValidationMessageFor(m => m.currentPassword, string.Empty, new { @class = "validation-summary-errors" })
                         <br/>
                     </div>
@@ -62,7 +62,7 @@
                         <label for="password" class="required">New Password:</label>
                     </div>
                     <div class="span8 pull-right controls-right-padding btn-padding-left">
-                        @Html.TextBoxFor(m => m.newPassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "New Password" })
+                        @Html.TextBoxFor(m => m.newPassword, new { @class = "input-block-level gray-border contact_margin input-block-display", type = "password", maxlength = "30", placeholder = "New Password" })
                         @Html.ValidationMessageFor(m => m.newPassword, string.Empty, new { @class = "validation-summary-errors" })
                         <br />
                     </div>
@@ -75,7 +75,7 @@
                         <label for="password" class="required">Confirm New Password:</label>
                     </div>
                     <div class="span8 pull-right controls-right-padding btn-padding-left ">
-                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm New Password" })
+                        @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin input-block-display", type = "password", maxlength = "30", placeholder = "Confirm New Password" })
                         @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
                         <br />
                     </div>
