--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -48,7 +48,7 @@
                                 <label class="required">Email ID:</label>
                             </div>
                             <div class="span8 pull-right btn-padding-left controls-right-padding">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border contact_margin", maxlength = "50", placeholder = "Email ID" })<br />
+                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border contact_margin input-block-display", maxlength = "50", placeholder = "Email ID" })<br />
                                 @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
