--- a/MiraiConsultMVC/Views/User/ResetPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ResetPassword.cshtml
@@ -35,7 +35,7 @@
                             </div>
                             <div class="span8  btn-padding-left controls-right-padding">
                                 <div>
-                                    @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "New Password" })
+                                    @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border contact_margin input-block-display", type = "password", maxlength = "30", placeholder = "New Password" })
                                     @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                                 </label>
                             </div>
                             <div class="span8  btn-padding-left controls-right-padding">
-                                @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm Password" })
+                                @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin input-block-display", type = "password", maxlength = "30", placeholder = "Confirm Password" })
                                 @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
