Add css class for ResetPassword.cshtml

--- a/MiraiConsultMVC/Views/User/ResetPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ResetPassword.cshtml
@@ -50,7 +50,7 @@
                                 </label>
                             </div>
                             <div class="span8  btn-padding-left controls-right-padding">
-                                @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin", type = "password", maxlength = "30", placeholder = "Confirm New Password" })
+                                @Html.TextBoxFor(m => m.confirmpassword, new { @class = "input-block-level gray-border contact_margin input-block-display", type = "password", maxlength = "30", placeholder = "Confirm New Password" })
                                 @Html.ValidationMessageFor(m => m.confirmpassword, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
