--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -20,7 +20,7 @@
                 <div style="margin-top:8%">
                     <div class='row-fluid'>
                         <div class="span12">
-                            <label class="finddoc-title">Relevant Questions : @ViewBag.tag</label>
+                            <label class="finddoc-title">Relevant Questions About @ViewBag.tag</label>
                         </div>
                     </div>
                     <div class="margin_bottom">
