--- a/MiraiConsultMVC/Content/TagClasses.css
+++ b/MiraiConsultMVC/Content/TagClasses.css
@@ -31,38 +31,68 @@
      background-color: #FFFFE5;
 }
 
+.tagcloud .tag10
+{
+    font-size: 32px;
+    font-weight:bold;
+}
+
+.tagcloud .tag9
+{
+    font-size: 30px;
+    font-weight:bold;
+}
+
+.tagcloud .tag8
+{
+    font-size: 28px;
+    font-weight:bold;
+}
+
+.tagcloud .tag7
+{
+    font-size: 26px;
+    font-weight:bold;
+}
+
+.tagcloud .tag6
+{
+    font-weight:bold;
+    font-size: 24px;
+}
+
 .tagcloud .tag5
 {
-    font-size: 2.8em;
+    font-size: 22px;
     font-weight:bold;
 }
 
 .tagcloud .tag4
 {
-    font-size: 2.5em;
+    font-size: 20px;
     font-weight:bold;
 }
 
 .tagcloud .tag3
 {
-    font-size: 2.1em;
+    font-size: 18px;
     font-weight:bold;
 }
 
 .tagcloud .tag2
 {
-    font-size: 1.8em;
+    font-size: 16px;
     font-weight:bold;
 }
 
 .tagcloud .tag1
 {
-    font-size: 1.5em;
+    font-size: 14px;
     font-weight:bold;
 }
 
 .tagcloud .tag0
 {
     font-weight:bold;
-    font-size: 1em;
+    font-size: 12px;
 }
