--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -626,13 +626,18 @@
     $("#Image").change(function () {
 
         var val = $(this).val();
-        switch (val.substring(val.lastIndexOf('.') + 1).toLowerCase()) {
-            case 'gif': case 'jpg': case 'png': case 'jpeg':
-                $("#ImageValidation").html("");
-                break;
-            default:
-                $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
-                break;
+        if (val.trim() != "") {
+            switch (val.substring(val.lastIndexOf('.') + 1).toLowerCase()) {
+                case 'gif': case 'jpg': case 'png': case 'jpeg':
+                    $("#ImageValidation").html("");
+                    break;
+                default:
+                    $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
+                    break;
+            }
+        }
+        else {
+            $("#ImageValidation").html("");
         }
     });
     $(document).ready(function () {
