Fixed Doctor question submit answer page alignment

--- a/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
@@ -69,7 +69,7 @@
         }
         if (count <= 0)
         {
-            <div class="row-fluid icon_padding_bottom custom-yellow-back">
+            <div class="row-fluid">
                 <span>No records found</span>
             </div>
         }
