--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -175,7 +175,7 @@
                                     </div>
                                     <br />
                                     <div class="row-fluid">
-                                        <div class="span6 offset4 btn-padding-left">
+                                        <div class="span6 offset4 btn-padding-left submit-padding-left">
                                             <input type="submit" class="btn thanx" value="Submit" onclick="if (!ValidateAllControl()) return false;">
                                             <input type="reset" class="btn" onclick="window.location.href = window.location.href" value="Clear">
                                         </div>
