--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -27,7 +27,6 @@ input[type="file"] {
     margin-left: 12px;
 }
 
-
 .required:after {
     color: #e32;
     content: '*';
@@ -1501,7 +1500,7 @@ input[readonly] {
 
 .cust-inner-footer {
     position: absolute;
-    top: 26px;
+    top: 35px;
 }
 
 .cust-footer-text,
@@ -2664,6 +2663,14 @@ table.cust-table {
         border-top-right-radius: 0px;
         border: none !important;
     }
+    .answer-title {
+        padding-bottom: 5px;
+        margin-bottom: 6px;
+        font-size: 20px;
+        color: #a7af38;
+        font-weight: 600;
+        margin-left: 38px;
+     }
     .margin-bottom-tolabel-large{
         margin-bottom:0%;
     }
@@ -3285,6 +3292,14 @@ table.cust-table {
 
     /* Landscape phones and down */
 @media only screen and (max-width: 480px) {
+    .answer-title {
+        padding-bottom: 5px;
+        margin-bottom: 6px;
+        font-size: 20px;
+        color: #a7af38;
+        font-weight: 600;
+        margin-left: 12px;
+     }
     .unreg_patientmenubar {
         padding: 25% 4% 0% 0%;
     }
@@ -4026,7 +4041,7 @@ table.cust-table {
     }
 }
   .menu-margin-top{
-        margin-top:-32% ;
+        margin-top:-55% ;
     }
 
 .validation-summary-errors
