--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -31,7 +31,7 @@
                                 <div class='row-fluid'>
                                     <div class='span12 custom-green-container' style="display:table">
                                         <a style="display:table-row" href='/@(System.Text.RegularExpressions.Regex.Replace(Model.ToList()[i].QuestionText.Replace(' ','-'),"[^a-zA-Z0-9_-]+", " ").Replace(" ","").ToLower())'>
-                                            <div class='question_text custom-middle'>@Model.ToList()[i].QuestionText </div>
+                                            <div class='question_text custom-middle'>@Html.Raw(Model.ToList()[i].QuestionText) </div>
                                         </a>
                                     </div>
                                 </div>
