fixed doctor question counter not display in windows 8 ie browser committing css changes

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4023,10 +4023,12 @@ table.cust-table {
         text-align:left;
     }
 }
-  .menu-margin-top{
-        margin-top:-55% ;
-    }
-
+.menu-margin-top {
+    padding-left:2px;
+    padding-right:2px;
+    position:absolute;
+    margin-left:-24%;
+}
 .validation-summary-errors
 {
     color: Red;
