--- a/MiraiConsultMVC/Views/Home/Contact.cshtml
+++ b/MiraiConsultMVC/Views/Home/Contact.cshtml
@@ -90,7 +90,7 @@
                         <div class="span12">
                             <div class="span8 pull-right btn-padding-left">
                                 <input type="submit" id="btnSend" class="btn thanx gray-border" value="Send" />
-                                <input type="reset" id="btnClear" class="btn cancel gray-border" value="Reset" onclick="window.location.href = '/Home/Contact'" />
+                                <input type="reset" id="btnClear" class="btn cancel gray-border" value="Reset" onclick="window.location.href = '/contact-us'" />
                             </div>
                         </div>
                     </div>
