Done css changes

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -357,9 +357,9 @@ a {
     color: #555555;
 }
 .ask-question-div{
-    margin-left: 66%;
-    margin-top:-46% !important;
-    width: 28% !important;
+    margin-left: 63%;
+    margin-top:-34% !important;
+    width: 29% !important;
     position:relative;
 }
 
@@ -371,7 +371,7 @@ a {
 
 .home-send-btn {
     width: 30% !important;
-    margin: 3% -23% 0% 0%;
+    margin: 7% -23% 0% 0%;
 }
 
 .margin-top-athome-nav {
@@ -399,9 +399,9 @@ a {
 .div-title-firsts {
     padding: 5px 20px 15px 20px;
     margin-bottom: 0px;
-    font-size: 20px;
-    color: #a5ae45;
-    font-weight: bold;
+    font-size: 25px;
+    color: #91993A;
+    font-weight: normal;
 }
 
 .find-Doc-gbColor {
@@ -1790,11 +1790,11 @@ dropdown-link-margin-left{
     margin-left:0px;
 }
 
-.ask-question-div {
-    margin-left: 66%;
-    margin-top: -43% !important;
-    width: 28% !important;
-    position: relative;
+.ask-question-div{
+    margin-left: 63%;
+    margin-top:-35% !important;
+    width: 29% !important;
+    position:relative;
 }
 .logoimage-width{
     width:207px !important;
