--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
 }
 
-<div class="image-padding-left">
+<div class="image-padding-left" style="vertical-align:central">
     <img src="../Content/image/home.png" />
     <div class="container">
         <div class="ask-question-div row-fluid hidden-phone">
@@ -38,7 +38,7 @@
                     <p class="div-title-firsts div-details-margin-left">Ask Doctors</p>
                 </div>
                 <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding textareadiv-margin" id="txtQuestion" onkeyup="Count(this)"
-                          placeholder="Type your question here" rows="3" cols="10" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");'></textarea>
+                          placeholder="Type your question here" rows="3" cols="10" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");' style="font-size:14px"></textarea>
             </div>
             <div class="row-fluid">
                 <div class="span12 ">
