gender are aligned

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -123,7 +123,7 @@
                                     <div class="controls">
                                         @if (Model.Gender != null)
                                         {
-                                            <label class="radio inline cust-font-style">
+                                            <label class="radio inline gendermargin cust-font-style">
                                                 @Html.RadioButton("Gender", "0", Model.Gender == 0, new { @class = "cust-font-style" }) Male
                                             </label>
                                             <label class="radio inline gendermargin cust-font-style">
