--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -2082,6 +2082,11 @@ table.cust-table {
 }
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 1025px) {
+    .main-outter-padding{
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-top:3%;
+    }
 
     .top_marging_sharelink div{
         width:66% !important;
@@ -2380,8 +2385,8 @@ table.cust-table {
        margin-top:-2%;
    }
    .ask-question-div{
-       margin-left: 66%;
-       margin-top: -45% !important;
+       margin-left: 62%;
+       margin-top: -37% !important;
        width: 30% !important;
        position: relative;
    }
@@ -2638,6 +2643,11 @@ table.cust-table {
         position: absolute;
         margin-left: 13% !important;
         margin-top: -3% !important;
+    }
+    .main-outter-padding{
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-top:5%;
     }
 }
 
@@ -3637,6 +3647,7 @@ table.cust-table {
     .main-outter-padding {
         padding-left: 10px;
         padding-right: 10px;
+        margin-top:6%;
     }
 
     .content_border {
