--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -246,19 +246,8 @@
             });
 
             $("#Image").change(function () {
-                var val = $(this).val();
-                if(val.trim()!= ""){
-                    switch (val.substring(val.lastIndexOf('.') + 1).toLowerCase()) {
-                        case 'gif': case 'jpg': case 'png': case 'jpeg':
-                            $("#ImageValidation").html("");
-                            break;
-                        default:
-                            $("#ImageValidation").html("Supports only .jpg,.png,.gif,.jpeg formats. Please upload a file with either of these extensions.");
-                            break;
-                    }
-                }
-                else{ 
-                    $("#ImageValidation").html("");}
+                var fileType = $(this).val();
+                isValidFileType(fileType);
             });
             $("#Image").click(function () {
                 $(this).val('');
