--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -625,7 +625,7 @@
     });
     $("#Image").change(function () {
         var fileType = $(this).val();
-        isValidFileType(fileType);
+        FileUploadValidation(fileType);
     });
     $("#Image").click(function () {
         $(this).val('');
