--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -287,7 +287,7 @@
     });
     $("#Image").change(function () {
         var fileType = $(this).val();
-        isValidFileType(fileType);
+        FileUploadValidation(fileType);
     });
     $("#Image").click(function () {
         $(this).val('');
