Fixed logo position related issue.

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4078,4 +4078,7 @@ table.cust-table {
     border-bottom:1px solid #DEE1BA;
     border-top:1px solid #DEE1BA;
 }
+.logo-margin-left{
+    margin-left:4%;
+}
 
