--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -202,7 +202,7 @@
                     <div class="imgwidth">
 
                         <a class="brand" href="@Url.Action("Home","Home")">
-                            <img src="~/Content/image/logo.png" class="col-md-4 logoimage-width" />
+                            <img src="~/Content/image/logo.png" class="col-md-4 logoimage-width logo-margin-left" />
                         </a>
                     </div>
 
