commit changes in url

--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -200,7 +200,7 @@
         }
     }
     function showDoctorDetailById(DoctorID) {
-        window.location.href = "/doctor-profile/" + DoctorID;
+        window.location.href = "/doctor-profile?UserId=" + DoctorID;
     }
     function EndRequestHandler() {
         initDataTable();
