commited minor changes

--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -169,7 +169,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
-                                                    <a href="/reports">
+                                                    <a href="/report">
                                                         <span class="Icon Icon--reports Icon--large" id="reports"></span><br /><span class="text">Reports</span>
                                                     </a>
                                                 </li>
