--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -218,7 +218,7 @@
                 <div class="row-fluid">
                     <div class="span12 btn-margin-top profile-button" style="text-align: center">
                         <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnSubmit" value="Save" onclick="if (!ValidateAllControl()) return false;" />
-                        <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" onclick="window.location.href = '/Doctors/DoctorProfile'" />
+                        <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" onclick="window.location.href = '/doctor-profile'" />
                     </div>
                 </div>
                 <div class="row-fluid">
