--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -64,7 +64,7 @@
                 <div class="span12">
                     <div class="span8 pull-right btn-padding-left">
                         <input type="submit" class="btn thanx tab_margin gray-border" value="Submit" onclick="if (!Page_ClientValidate()){ this.disabled = false;} else{ this.disabled = true;}">
-                        <input type="reset" class="btn tab_margin cancel gray-border" onclick="window.location.href = '/Patients/InviteFriend'" value="Reset">                       
+                        <input type="reset" class="btn tab_margin cancel gray-border" onclick="window.location.href = '/invite-friends'" value="Reset">                       
                     </div>
                 </div>
             </div>
