--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -247,7 +247,7 @@
                                 <div class="row-fluid cust-padding-bw-row text-center">
                                     <div class="span12">
                                         <input type="submit" name="btnCreateDoctorAccount" value="Create Account" id="btnCreateDoctorAccount" onclick="" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style">
-                                        <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="window.location.href = '/User/DoctorSignUp'" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style">
+                                        <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="window.location.href = '/doctor-signup'" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style">
                                     </div>
                                 </div>
                             </div>
